--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
+spring.datasource.platform=h2
+spring.datasource.url=jdbc:h2:mem:test
+spring.h2.console.enabled=true
+spring.h2.console.path=/console
 spring.jackson.serialization.write-dates-as-timestamps=false
